remade upload avatar
