# resources/model_update_profile_data_attributes.go
@@ -12,6 +12,8 @@ package resources
 
 import (
 	"encoding/json"
+	"bytes"
+	"fmt"
 )
 
 // checks if the UpdateProfileDataAttributes type satisfies the MappedNullable interface at compile time
@@ -19,18 +21,23 @@ var _ MappedNullable = &UpdateProfileDataAttributes{}
 
 // UpdateProfileDataAttributes struct for UpdateProfileDataAttributes
 type UpdateProfileDataAttributes struct {
-	// Pseudonym
+	// pseudonym
 	Pseudonym *string `json:"pseudonym,omitempty"`
-	// Description
+	// description
 	Description *string `json:"description,omitempty"`
+	// delete avatar
+	DeleteAvatar bool `json:"delete_avatar"`
 }
+
+type _UpdateProfileDataAttributes UpdateProfileDataAttributes
 
 // NewUpdateProfileDataAttributes instantiates a new UpdateProfileDataAttributes object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewUpdateProfileDataAttributes() *UpdateProfileDataAttributes {
+func NewUpdateProfileDataAttributes(deleteAvatar bool) *UpdateProfileDataAttributes {
 	this := UpdateProfileDataAttributes{}
+	this.DeleteAvatar = deleteAvatar
 	return &this
 }
 
@@ -106,6 +113,30 @@ func (o *UpdateProfileDataAttributes) SetDescription(v string) {
 	o.Description = &v
 }
 
+// GetDeleteAvatar returns the DeleteAvatar field value
+func (o *UpdateProfileDataAttributes) GetDeleteAvatar() bool {
+	if o == nil {
+		var ret bool
+		return ret
+	}
+
+	return o.DeleteAvatar
+}
+
+// GetDeleteAvatarOk returns a tuple with the DeleteAvatar field value
+// and a boolean to check if the value has been set.
+func (o *UpdateProfileDataAttributes) GetDeleteAvatarOk() (*bool, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.DeleteAvatar, true
+}
+
+// SetDeleteAvatar sets field value
+func (o *UpdateProfileDataAttributes) SetDeleteAvatar(v bool) {
+	o.DeleteAvatar = v
+}
+
 func (o UpdateProfileDataAttributes) MarshalJSON() ([]byte, error) {
 	toSerialize,err := o.ToMap()
 	if err != nil {
@@ -122,7 +153,45 @@ func (o UpdateProfileDataAttributes) ToMap() (map[string]interface{}, error) {
 	if !IsNil(o.Description) {
 		toSerialize["description"] = o.Description
 	}
+	toSerialize["delete_avatar"] = o.DeleteAvatar
 	return toSerialize, nil
+}
+
+func (o *UpdateProfileDataAttributes) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"delete_avatar",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varUpdateProfileDataAttributes := _UpdateProfileDataAttributes{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varUpdateProfileDataAttributes)
+
+	if err != nil {
+		return err
+	}
+
+	*o = UpdateProfileDataAttributes(varUpdateProfileDataAttributes)
+
+	return err
 }
 
 type NullableUpdateProfileDataAttributes struct {
